# Octree27

./: .gitignore  CMakeLists.txt  CoteMarek.h  CoteMarek_old.h  EnhancedElement.cpp  EnhancedElement.h  FEMesh.h  FaceDiagonal.cpp  FaceDiagonal.h  GeometricTransform.cpp  GeometricTransform.h  GridMesher.cpp  GridMesher.h  HexRotation.cpp  HexRotation.h  Main.cpp  MeshPoint.cpp  MeshPoint.h  Mesher.cpp  Mesher.h  MixTest.cpp  Octant.cpp  Octant.h  OctreeEdge.cpp  OctreeEdge.h  PatternFactory.cpp  PatternFactory.h  PatternFactory_bkp.cpp  PatternFactory_bkp2.cpp  PatternFactory_inversedElement.cpp  PatternsConfig.h  Point3D.cpp  Point3D.h  Prism.cpp  Prism.h  README.md  RefinementAllRegion.cpp  RefinementAllRegion.h  RefinementCubeRegion.cpp  RefinementCubeRegion.h  (+47 more)
Visitors/: EdgeVisitor.cpp  EdgeVisitor.h  IntersectionsVisitor.cpp  IntersectionsVisitor.h  OneIrregularVisitor.cpp  OneIrregularVisitor.h  PointMovedVisitor.cpp  PointMovedVisitor.h  RemoveSubElementsVisitor.cpp  RemoveSubElementsVisitor.h  SplitVisitor (copy).cpp  SplitVisitor.cpp  SplitVisitor.h  SurfaceTemplatesVisitor.cpp  SurfaceTemplatesVisitor.h  TransitionPatternVisitor.cpp  TransitionPatternVisitor.h  Visitor.cpp  Visitor.h
